ft-error.txt
      [8/14] /usr/bin/gcc  -pthread -DECMULT_GEN_PREC_BITS=4 -DECMULT_WINDOW_SIZE=15 -DENABLE_MODULE_ECDH=1 -DENABLE_MODULE_ELLSWIFT=1 -DENABLE_MODULE_EXTRAKEYS=1 -DENABLE_MODULE_RECOVERY=1 -DENABLE_MODULE_SCHNORRSIG=1 -DUSE_ASM_X86_64=1  -O2 -std=c90 -fPIC -fvisibility=hidden -pedantic -Wall -Wcast-align -Wcast-align=strict -Wextra -Wnested-externs -Wno-long-long -Wno-overlength-strings -Wno-unused-function -Wshadow -Wstrict-prototypes -Wundef -MD -MT _deps/vendored_library-build/src/CMakeFiles/secp256k1_precomputed.dir/precomputed_ecmult_gen.c.o -MF _deps/vendored_library-build/src/CMakeFiles/secp256k1_precomputed.dir/precomputed_ecmult_gen.c.o.d -o _deps/vendored_library-build/src/CMakeFiles/secp256k1_precomputed.dir/precomputed_ecmult_gen.c.o -c /tmp/tmpjep0eyew/build/_deps/vendored_library-src/src/precomputed_ecmult_gen.c
      [9/14] cd /tmp/tmpjep0eyew/build/_gen_c_file && /home/xiru/.venv-3.13.0rc1-nogil/bin/python3.13 /tmp/tmpjep0eyew/build/_gen_c_file/build.py /tmp/tmpjep0eyew/build/_gen_cffi_headers /tmp/tmpjep0eyew/build/_gen_c_file/secp256k1_cffi_bindings.c 'ON'
      INFO:root:Starting CFFI build process...
      <frozen importlib._bootstrap>:488: RuntimeWarning: The global interpreter lock (GIL) has been enabled to load module '_cffi_backend', which has not declared that it can run safely without the GIL. To override this behavior and keep the GIL disabled (at your own risk), run with PYTHON_GIL=0 or -Xgil=0.
      INFO:root:   Static True...
      INFO:root:   Including secp256k1.h...
      INFO:root:   Including secp256k1_ecdh.h...
      INFO:root:   Including secp256k1_ellswift.h...
      INFO:root:   Including secp256k1_extrakeys.h...
      INFO:root:   Including secp256k1_preallocated.h...
      INFO:root:   Including secp256k1_recovery.h...
      INFO:root:   Including secp256k1_schnorrsig.h...
      INFO:root:   Generated C code: /tmp/tmpjep0eyew/build/_gen_c_file/secp256k1_cffi_bindings.c
      generating /tmp/tmpjep0eyew/build/_gen_c_file/secp256k1_cffi_bindings.c
      [10/14] /usr/bin/gcc  -pthread -DIS_LINUX -DPy_LIMITED_API -D_libsecp256k1_EXPORTS -I/tmp/tmpjep0eyew/build/_deps/vendored_library-src/include -isystem /opt/python/python-3.13.0rc1-nogil/include/python3.13t -O3 -DNDEBUG -fPIC -MD -MT cm_python_module/CMakeFiles/_libsecp256k1.dir/__/_gen_c_file/secp256k1_cffi_bindings.c.o -MF cm_python_module/CMakeFiles/_libsecp256k1.dir/__/_gen_c_file/secp256k1_cffi_bindings.c.o.d -o cm_python_module/CMakeFiles/_libsecp256k1.dir/__/_gen_c_file/secp256k1_cffi_bindings.c.o -c /tmp/tmpjep0eyew/build/_gen_c_file/secp256k1_cffi_bindings.c
      FAILED: cm_python_module/CMakeFiles/_libsecp256k1.dir/__/_gen_c_file/secp256k1_cffi_bindings.c.o
      /usr/bin/gcc  -pthread -DIS_LINUX -DPy_LIMITED_API -D_libsecp256k1_EXPORTS -I/tmp/tmpjep0eyew/build/_deps/vendored_library-src/include -isystem /opt/python/python-3.13.0rc1-nogil/include/python3.13t -O3 -DNDEBUG -fPIC -MD -MT cm_python_module/CMakeFiles/_libsecp256k1.dir/__/_gen_c_file/secp256k1_cffi_bindings.c.o -MF cm_python_module/CMakeFiles/_libsecp256k1.dir/__/_gen_c_file/secp256k1_cffi_bindings.c.o.d -o cm_python_module/CMakeFiles/_libsecp256k1.dir/__/_gen_c_file/secp256k1_cffi_bindings.c.o -c /tmp/tmpjep0eyew/build/_gen_c_file/secp256k1_cffi_bindings.c
      In file included from /tmp/tmpjep0eyew/build/_gen_c_file/secp256k1_cffi_bindings.c:57:
      /opt/python/python-3.13.0rc1-nogil/include/python3.13t/Python.h:51:4: error: #error "The limited API is not currently supported in the free-threaded build"
         51 | #  error "The limited API is not currently supported in the free-threaded build"
            |    ^~~~~
      In file included from /opt/python/python-3.13.0rc1-nogil/include/python3.13t/Python.h:68,
                       from /tmp/tmpjep0eyew/build/_gen_c_file/secp256k1_cffi_bindings.c:57:
      /opt/python/python-3.13.0rc1-nogil/include/python3.13t/object.h:213:5: error: unknown type name ‘PyMutex’
        213 |     PyMutex ob_mutex;           // per-object lock
            |     ^~~~~~~
      [11/14] /usr/bin/gcc  -pthread -DECMULT_GEN_PREC_BITS=4 -DECMULT_WINDOW_SIZE=15 -DENABLE_MODULE_ECDH=1 -DENABLE_MODULE_ELLSWIFT=1 -DENABLE_MODULE_EXTRAKEYS=1 -DENABLE_MODULE_RECOVERY=1 -DENABLE_MODULE_SCHNORRSIG=1 -DUSE_ASM_X86_64=1  -O2 -std=c90 -fPIC -fvisibility=hidden -pedantic -Wall -Wcast-align -Wcast-align=strict -Wextra -Wnested-externs -Wno-long-long -Wno-overlength-strings -Wno-unused-function -Wshadow -Wstrict-prototypes -Wundef -MD -MT _deps/vendored_library-build/src/CMakeFiles/secp256k1_precomputed.dir/precomputed_ecmult.c.o -MF _deps/vendored_library-build/src/CMakeFiles/secp256k1_precomputed.dir/precomputed_ecmult.c.o.d -o _deps/vendored_library-build/src/CMakeFiles/secp256k1_precomputed.dir/precomputed_ecmult.c.o -c /tmp/tmpjep0eyew/build/_deps/vendored_library-src/src/precomputed_ecmult.c
